--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,4 @@
-body{
+ebody{
   margin: 0;
   text-align: center;
   font-family: sans-serif;
@@ -44,7 +44,7 @@ h4{
 .mountain{
   width: 600px;
   height: 400px;
-  position: fixed;
+  position: relative;
   top: 90px;
 }
 
